Session Managed and Leave controller updated
