# Routes/indexRoute.js
@@ -1,6 +1,7 @@
 const express = require("express")
 
 const router = express.Router()
+const { routeaccess, adminaccess } = require('../middlewares/authmiddleware');
 
 const employeeRoute = require("./employeeRoutes")
 const companyRoute = require("./companyRoutes")
@@ -10,11 +11,11 @@ const leavesRoute = require("./leavesRoutes")
 const attendanceRuoute = require("./attandanceRoutes")
 const auth = require("./auth")
 
-router.use("/company/employee",employeeRoute)
+router.use("/company/employee",routeaccess,employeeRoute)
 router.use("/compnay",companyRoute)
-router.use("/company/department",departmentRoute)
-router.use("/admin",adminRoute)
-router.use("/employee",leavesRoute)
+router.use("/company/department",adminaccess,departmentRoute)
+router.use("/admin",adminaccess,adminRoute)
+router.use("/employee",routeaccess,leavesRoute)
 router.use("/employee",attendanceRuoute)
 router.use("/auth",auth)
 
