# controller/leavesControllers.js
@@ -1,49 +1,62 @@
 const LeaveSchema = require('../models/Leaves')
-const EmployeeSchema = require('../models/Employee')
+const EmployeeSchema = require('../models/Employee');
+const AvailableLeaveSchema = require('../models/AvailableLeaves');
+const date = require('date-and-time');
 
 
 const applyleave = async(req,res)=>{
     try {
-        const {start_date , end_date ,employeeID,leaveReason} = req.body
-        const employee = await EmployeeSchema.findById(employeeID);
+        const user = req.user;
+        const {start_date , end_date ,leaveReason,typeOfLeave} = req.body
+        const employee = await EmployeeSchema.findById(user._id);
+        const AvailableLeave = await AvailableLeaveSchema.findOne({Employee:user._id});
+        
+        if(AvailableLeave[typeOfLeave]> start_date-end_date){
+            return res.send("You don't have suuficient leaves to apply")
+        }
         const leave = new LeaveSchema(
             {
                 start_date,
                 end_date,
                 leaveReason,
-                employe:employeeID,
                 status:'Recieved',
-                employee:employee._id
+                employee:employee._id,
+                type:typeOfLeave
             }
         )
-   
-        
         await leave.save();
         res.send("Leave request sent")
 
     } catch (error) {
-        res.send(error.message)
+        res.send(error)
     }
 }
 
 const approveLeave = async(req,res)=>{
-    const leave = await LeaveSchema.findById(req.body.leave_id);
-    const employee =await EmployeeSchema.findById(leave.employee);
+    const user = req.user;
+    if(user.Role === 'HR'){
+        const leave = await LeaveSchema.findById(req.body.leave_id);
+        leave.status = 'Approved'
+        const Availableleves = await AvailableLeaveSchema.findOne({Employee:leave.employee})
+        Availableleves[leave.type] = Availableleves[leave.type]- 2;
 
-    // validation
-    leave.status = 'Approved'
-    await leave.save();
-    employee.Leave = employee.Leave  +1;
-    await employee.save();
-    res.send("Leave Approved")
-
+        await leave.save();
+        await Availableleves.save();
+        return res.send("Leave Approved")
+    }
+    return res.send("Not Authorized to perform this task")
 }
 
 const rejectLeave = async(req,res)=>{
-    const leave = await LeaveSchema.findById(req.body.leave_id);
-    leave.status = 'Rejected'
-    await leave.save();
-    res.send("Leave Rejected")
+    const user = req.user;
+    if(user.Role === 'HR'){
+        const leave = await LeaveSchema.findById(req.body.leave_id);
+        leave.status = 'Rejected'
+        await leave.save();
+        return res.send("Leave Rejected")
+    }
+    return res.send("Not Authorized to perform this task")
+
 }
 
 module.exports = {
