# controller/updateLeave.js
@@ -1,38 +1,27 @@
 const AvailableLeaveSchema = require('../models/AvailableLeaves')
 
 const updateLeave = async(req,res,next)=>{
-    const {Casual,Sick,
-    Maternity,
-    Paternity,
-    Privilege,
-    Bereavement,
-    Compensatory,
-    Unpaid,employeeId}=req.body;
-
-    const leaves =await AvailableLeaveSchema.findOne({Employee:employeeId});
-    if(!leaves){
-        const newentry = new AvailableLeaveSchema({
-            Employee:employeeId,
-            Casual,Sick,
+    const user = req.user;
+    if(user.Role === 'HR'){
+        const {Casual,Sick,
             Maternity,
             Paternity,
             Privilege,
             Bereavement,
             Compensatory,
-            Unpaid
-        })
-        await newentry.save();
-        return res.send("Leaves are set for employee")
-    }
+            Unpaid,employeeId}=req.body;
+        
+        const leaves =await AvailableLeaveSchema.findOne({Employee:employeeId}); 
 
-            
-    for(const key in req.body){
-        if(req.body[key] && key!= 'employeeId'){
-            leaves[key] = req.body[key];          
+        for(const key in req.body){
+            if(req.body[key] && key!= 'employeeId'){
+                leaves[key] = req.body[key];          
+            }
+            await leaves.save();
         }
-        await leaves.save();
+        return res.send("Leaves updated")
     }
-    return res.send("Leaves updated")
+    return res.send("Not Authorized to perform this task")
 } 
 
 module.exports = {updateLeave}
